# labII-test

./: CMakeLists.txt
src/factorial/: factorial.cpp
src/vector/: size_capacity.cpp
